# socotra-document-conversion

./: .env.ai-documents.example  .gitignore  AGENTS.md  CLAUDE.md  CONFIG_COVERAGE.md  README.md  SCHEMA.md  conftest.py  install.py  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  skill-lessons.yaml  terminology.yaml
conformance/: README.md  run-conformance.py
docs/: CODEMAP.md  CONFIG_COVERAGE.md  RenderingDataConfigRelated.md  SCHEMA.md  demo-runbook.md  demo-story.md  leg-internals.md  pipeline-dataflow.md  variants-and-path-review.md  writing-conditions.md  zencover-protection-demo.md
notes/: aig-config-lint-report.md  aig-live-render-plan.md  aig-m1-skeleton-report.md  aig-m3-benefit-schedule-plan.md  aig-plugin-inventory.md  audit-2026-07-legs-minus1-to-2.md  condition-dsl-design.md  decompose-clonker-legs.md  dedup-shared-registry-and-markup.md  feature-gated-paths.md  fix-variants-only-test-fallout.md  human-fill-friction-gaps.md  leg4-additive-stale-occurrence-guard.md  multi-variant-conditional-plan.md  render-preview-todo.md  retire-legacy-conditional-form.md  roleplay-RPAgnosticNotice-transcript.md  roleplay-RPCoverageMatrix-transcript.md  roleplay-RPProtectionSchedule-transcript.md  roleplay-RPQuoteOffer-transcript.md  roleplay-RPRenewalRegions-transcript.md  roleplay-RPWelcomeBasic-transcript.md  roleplay-RenewalLetter-transcript.md  roleplay-results.csv  tables-in-templates-2026-07-12.md  unify-jar-introspection-cache.md  variants-only-conditional-text-plan.md  variants-only-conditional-text.md
registry/: README.md  (+3 more)
(+422 files in other folders)
