[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "velocity-converter"
version = "0.1.0"
description = "Word/PDF/HTML to Socotra Velocity template pipeline (five-leg)"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "mcp>=1.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
velocity-converter-mcp = "velocity_converter.mcp_server:main"

[tool.setuptools]
packages = ["velocity_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/pipeline"]
markers = [
    "unit: fast hermetic module tests (tests/regression)",
    "integration: cross-module / subprocess tests (tests/integration)",
    "jar: requires compiled product JARs under build/ (auto-skips when absent)",
]
